# cpp-conda

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  environment.yaml
.github/workflows/: build-and-test.yaml  checks.yaml
include/libraryname/: library.h
scripts/: check-format.sh  setup_dev.sh
src/: CMakeLists.txt  address_book.proto  main.cpp
src/libraryname/: library.cpp
src/subdir1/: private_library.cpp  private_library.h
